Addtional index.html styling. Recipe of month to correct on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,6 +72,7 @@ h4 {
 .main-image-row {
     margin-top: 50px;
 }
+
 .main-image {
   position: relative;
   text-align: center;
@@ -83,8 +84,8 @@ h4 {
   left: 15px;
   margin-left: 20px;
   margin-top: 20px;
-  margin-right: 50px;
-  background-color: white;
+  margin-right: 70px;
+  background-color: rgba(255, 255, 255, 0.7);
   padding: 10px 20px;
 }
 
@@ -110,7 +111,7 @@ h4 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .small-image-text h3 {
@@ -168,4 +169,36 @@ footer {
 
 .recipes h5 {
   color: white;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 768px) {
+
+.main-image-row {
+    margin-top: 30px;
+    margin-bottom: 0px;
+}
+#main-image-text{
+    margin-bottom: 
+}
+#main-image-text h1 {
+    font-size: 2.8rem;
+    margin-top: 5px;
+}
+
+#main-image-text h2 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.small-image-text h3 {
+font-size: 1.1rem;
+
+}
+
+.homepage-sml-img  {
+  margin-top: 15px;
+}
+
 }
